# scripting-interface

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
include/javascript/momo/: export.h  javascript_functions.hpp  javascript_interface.hpp  javascript_reference.hpp  javascript_value.hpp  napi_types.hpp
include/python/momo/: python_exception.hpp  python_interface.hpp  python_interpreter_lock.hpp  python_object.hpp  python_types.hpp
samples/: CMakeLists.txt
samples/javascript-sample/: CMakeLists.txt  main.cpp  test.js
samples/python-sample/: CMakeLists.txt  main.cpp  test.py
src/: CMakeLists.txt  test.cpp
src/javascript/: CMakeLists.txt  javascript_functions.hpp  javascript_interface.cpp  javascript_library.cpp  javascript_library.hpp  javascript_reference.cpp  javascript_value.cpp  scoped_interface.cpp  scoped_interface.hpp
src/python/: CMakeLists.txt  python_exception.cpp  python_functions.hpp  python_interface.cpp  python_interpreter_lock.cpp  python_library.cpp  python_library.hpp  python_object.cpp  scoped_interface.cpp  scoped_interface.hpp
